# fsfw

./: .gitmodules  README.md
ReactionWheelSim/: CMakeLists.txt  ReactionWheelSim.ino  USBtoWSL.ps1  rw_commander.py  rw_commanderCPP.cpp  rw_pus.py  send_rw_pus.py
ReactionWheelSim/ReactionWheelSim/: ReactionWheelSim.ino
ReactionWheelSim/rwBuild/: CMakeCache.txt  cmake_install.cmake  rw_commanderCPP
bsp_hosted/: main.cpp
bsp_hosted/core/: InitMission.cpp  ObjectFactory.cpp  ObjectFactoryHARDC.cpp
example_common/: CMakeLists.txt
example_common/cmake/: common.cmake
example_common/config/: CMakeLists.txt  OBSWVersion.h  commonClassIds.h  commonConfig.h.in  commonObjects.h  commonPollingSequenceFactory.cpp  commonSubsystemIds.h
example_common/config/common/: definitions.h
example_common/doc/: README-cmake.md  README-eclipse.md
example_common/example/: CMakeLists.txt
example_common/example/cfdp/: Config.h
example_common/example/controller/: CMakeLists.txt  FsfwTestController.cpp  FsfwTestController.h
example_common/example/core/: CMakeLists.txt  GenericFactory.cpp  GenericFactory.h
example_common/example/devices/: TestDeviceHandler.h
example_common/example/test/: CMakeLists.txt  FsfwExampleTask.cpp  FsfwExampleTask.h  FsfwReaderTask.cpp  FsfwReaderTask.h  FsfwTestTask.cpp  FsfwTestTask.h  MutexExample.cpp  MutexExample.h  testFmt.cpp  testFmt.h
example_common/mission/: CMakeLists.txt
example_common/scripts/: auto-formatter.sh
example_common/stm32h7/: CMakeLists.txt  STM32TestTask.cpp  STM32TestTask.h
fsfw/: CHANGELOG.md  CMakeLists.txt
fsfw/docs/: conf.py
fsfw/scripts/: helper.py
fsfw/src/fsfw_hal/linux/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h
fsfw/src/fsfw_hal/linux/i2c/: I2cComIF.cpp  I2cComIF.h
fsfw/src/fsfw_hal/linux/serial/: CMakeLists.txt  SerialComIF.cpp  SerialComIF.h  SerialCookie.cpp  SerialCookie.h  helper.cpp  helper.h
fsfw/src/fsfw_hal/linux/uio/: UioMapper.cpp
generators/fsfwgen/: NOTICE  README.md  requirements.txt  setup.cfg
generators/fsfwgen/fsfwgen/: __init__.py  core.py  logging.py
generators/fsfwgen/fsfwgen/events/: event_parser.py
generators/fsfwgen/fsfwgen/objects/: objects.py
generators/fsfwgen/fsfwgen/parserbase/: file_list_parser.py  parser.py
generators/fsfwgen/fsfwgen/returnvalues/: returnvalues_parser.py
generators/fsfwgen/fsfwgen/utility/: csv_writer.py  file_management.py  printer.py  sql_writer.py
tmtc/common_tmtc/: common.py
(+132 files in other folders)
