[metadata]
name = fsfwgen
description = FSFW Generator Core
version = attr: fsfwgen.__version__
long_description = file: README.md, NOTICE
long_description_content_type = text/markdown
license = Apache-2.0
author = Robin Mueller
author_email = muellerr@irs.uni-stuttgart.de
platform = any

url = https://egit.irs.uni-stuttgart.de/fsfw/fsfwgen
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Communications
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Scientific/Engineering

[options]
install_requires = 
	colorlog>=6.0.0
package_dir =
    = .
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 100
ignore = D203, W503
exclude =
	.git,
	__pycache__,
	docs/conf.py,
	old,
	build,
	dist,
	venv
max-complexity = 10
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
